# RaspberryPi-bareMetal

./: LICENSE  README.md
PiManager/src/: CMakeLists.txt  options.cmake  qt_macros.cmake
PiManager/src/Application/: CMakeLists.txt  main.cpp
PiManager/src/Common/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.hpp  FunctionRepresentation.cpp  FunctionRepresentation.h  FunctionsTreeManager.cpp  FunctionsTreeManager.hpp  SettingsManager.cpp  SettingsManager.hpp
PiManager/src/Tests/: CMakeLists.txt  test_main.cpp
PiManager/src/Widgets/: CMakeLists.txt  ControlButtons.cpp  ControlButtons.h  ControlButtons.hpp  FileWidget.cpp  FileWidget.hpp  FunctionsWidget.cpp  FunctionsWidget.hpp  LogsTab.cpp  LogsTab.hpp  LogsWidget.cpp  LogsWidget.hpp  PiManagerWindow.cpp  PiManagerWindow.h  PiManagerWindow.hpp  SerialPortsComboBox.cpp  SerialPortsComboBox.hpp  SettingsTab.cpp  SettingsTab.hpp  TreeWidget.cpp  TreeWidget.h
